--- a/dfn-ics.ipynb
+++ b/dfn-ics.ipynb
@@ -9,6 +9,14 @@
    },
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "url der DFN-Umfrage https://terminplaner6.dfn.de/p/dd909abc6f030287013be02e4767199b-370621\n",
+      "Name der Person (genau wie in der DFN-Tabelle): Ben\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<a href=\"dates.ics\" download>ics runterladen</a>"
@@ -24,8 +32,8 @@
    ],
    "source": [
     "# imports\n",
-    "import tkinter as tk\n",
-    "from tkinter import simpledialog\n",
+    "#import tkinter as tk\n",
+    "#from tkinter import simpledialog\n",
     "import requests \n",
     "from bs4 import BeautifulSoup\n",
     "from icalendar import Calendar, Event, vCalAddress, vText\n",
@@ -38,6 +46,7 @@
     "os.environ['TZ'] = 'Europe/Berlin'\n",
     "\n",
     "#requesting url and name from user\n",
+    "'''\n",
     "ROOT = tk.Tk()\n",
     "ROOT.withdraw()\n",
     "urlInput = simpledialog.askstring(title=\"url\",\n",
@@ -45,6 +54,10 @@
     "ROOT.withdraw()\n",
     "nameInput = simpledialog.askstring(title=\"name\",\n",
     "                                  prompt=\"Name der Person (genau wie in der DFN-Tabelle):\")\n",
+    "'''                                \n",
+    "\n",
+    "urlInput = input(\"url der DFN-Umfrage\")\n",
+    "nameInput = input(\"Name der Person (genau wie in der DFN-Tabelle):\")\n",
     "\n",
     "# downloading and processing data\n",
     "url = urlInput\n",
@@ -94,6 +107,14 @@
     "#show download link\n",
     "HTML(f'<a href=\"dates.ics\" download>ics runterladen</a>')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69a5cb7a-7bed-450a-8455-bbd4876b6be2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
