--- a/dfn-ics.ipynb
+++ b/dfn-ics.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "1d3fe9ab-7720-4e62-ac3d-23fcb9fb5aaa",
-   "metadata": {},
-   "source": [
-    "1. run the code\n",
-    "2. enter url of dfn Terminplaner\n",
-    "3. enter name of person\n",
-    "4. download ics whith selected options as tentative dates"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9f5fdb3d-b09d-46ee-a3cc-f43025ffa783",
@@ -89,12 +78,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69a5cb7a-7bed-450a-8455-bbd4876b6be2",
+   "cell_type": "markdown",
+   "id": "1d3fe9ab-7720-4e62-ac3d-23fcb9fb5aaa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. run the code (collapsed cell above)\n",
+    "2. enter url of dfn Terminplaner\n",
+    "3. enter name of person\n",
+    "4. download ics whith selected options as tentative dates"
+   ]
   }
  ],
  "metadata": {
