supressed pandas future warning

--- a/dfn-ics.ipynb
+++ b/dfn-ics.ipynb
@@ -5,9 +5,6 @@
    "execution_count": null,
    "id": "9f5fdb3d-b09d-46ee-a3cc-f43025ffa783",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -21,6 +18,8 @@
     "import pandas as pd\n",
     "import os\n",
     "from IPython.display import display, HTML\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
     "os.environ['TZ'] = 'Europe/Berlin'\n",
     "\n",
