--- a/dfn-ics.ipynb
+++ b/dfn-ics.ipynb
@@ -5,6 +5,9 @@
    "execution_count": null,
    "id": "9f5fdb3d-b09d-46ee-a3cc-f43025ffa783",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -79,7 +82,9 @@
   {
    "cell_type": "markdown",
    "id": "1d3fe9ab-7720-4e62-ac3d-23fcb9fb5aaa",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "1. run the code (collapsed cell above)\n",
     "2. enter url of dfn Terminplaner\n",
