--- a/dfn-ics.ipynb
+++ b/dfn-ics.ipynb
@@ -86,7 +86,7 @@
     "tags": []
    },
    "source": [
-    "1. run the code (collapsed cell above)\n",
+    "1. click the \"play\" button (to run the code in the collapsed cell above)\n",
     "2. enter url of dfn Terminplaner\n",
     "3. enter name of person\n",
     "4. download ics whith selected options as tentative dates"
