--- a/dfn-ics.ipynb
+++ b/dfn-ics.ipynb
@@ -86,11 +86,19 @@
     "tags": []
    },
    "source": [
-    "1. click the \"play\" button (to run the code in the collapsed cell above)\n",
-    "2. enter url of dfn Terminplaner\n",
-    "3. enter name of person\n",
-    "4. download ics whith selected options as tentative dates"
+    "### 1. click the \"play\" button (to run the code in the collapsed cell above)\n",
+    "### 2. enter url of dfn Terminplaner\n",
+    "### 3. enter name of person \n",
+    "### 4. download ics whith selected options as tentative dates"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "386568e7-89ae-4c0c-bc70-70c8ff181357",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
