whole day events & missing end date

--- a/dfn-ics.ipynb
+++ b/dfn-ics.ipynb
@@ -47,23 +47,41 @@
     "c = Calendar()\n",
     "c.add('prodid', '-//My calendar product//example.com//')\n",
     "c.add('version', '2.0')\n",
+    "\n",
     "for columnname in dates_table:\n",
     "    column = dates_table[columnname]\n",
     "    if (column.get(name)=='Ja'):\n",
     "        year = column.name.split()[1][0:4]\n",
     "        month = months[column.name.split()[0]]\n",
     "        day = column.get(column.index[0]).split()[1]\n",
-    "        start = column.get(column.index[1]).split('->')[0]\n",
-    "        end = column.get(column.index[1]).split('->')[1]\n",
-    "        d_start = str(month)+ '/' + str(day) +'/' + str(year) + ' ' + start\n",
-    "        start_date = datetime.datetime.strptime(\n",
-    "          d_start, '%m/%d/%Y %H:%M')\n",
-    "        d_end = str(month)+ '/' + str(day) +'/' + str(year) + ' ' + end\n",
-    "        end_date = datetime.datetime.strptime(\n",
-    "          d_end, '%m/%d/%Y %H:%M')\n",
+    "        #if table contains no time info --> whole day event\n",
+    "        if((column.get(column.index[1]))=='-'):\n",
+    "            datestring = year+str(month).zfill(2)+day\n",
+    "            start_date = datetime.datetime.strptime(\n",
+    "              datestring, '%Y%m%d')            \n",
+    "        #table contains time info\n",
+    "        else:\n",
+    "            # if there is no end date --> end date is one hour after start\n",
+    "            if (len(column.get(column.index[1]))==5):\n",
+    "                start = column.get(column.index[1])\n",
+    "                d_start = str(month)+ '/' + str(day) +'/' + str(year) + ' ' + start\n",
+    "                start_date = datetime.datetime.strptime(\n",
+    "                  d_start, '%m/%d/%Y %H:%M') \n",
+    "                end_date = start_date+datetime.timedelta(hours=1)\n",
+    "            # else (there is an end date)\n",
+    "            else:               \n",
+    "                start = column.get(column.index[1]).split('->')[0]\n",
+    "                end = column.get(column.index[1]).split('->')[1]\n",
+    "                d_start = str(month)+ '/' + str(day) +'/' + str(year) + ' ' + start\n",
+    "                start_date = datetime.datetime.strptime(\n",
+    "                  d_start, '%m/%d/%Y %H:%M')\n",
+    "                d_end = str(month)+ '/' + str(day) +'/' + str(year) + ' ' + end\n",
+    "                end_date = datetime.datetime.strptime(\n",
+    "                      d_end, '%m/%d/%Y %H:%M')\n",
     "        event = Event()\n",
     "        event.add('dtstart', start_date)\n",
-    "        event.add('dtend', end_date)\n",
+    "        if not ((column.get(column.index[1]))=='-'):\n",
+    "            event.add('dtend', end_date)\n",
     "        event.add('summary', summary)\n",
     "        event.add('url', url)\n",
     "        event.add('status', 'TENTATIVE')\n",
@@ -91,14 +109,6 @@
     "### 3. enter name of person \n",
     "### 4. download ics whith selected options as tentative dates"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "386568e7-89ae-4c0c-bc70-70c8ff181357",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
