--- a/dfn-ics.ipynb
+++ b/dfn-ics.ipynb
@@ -105,8 +105,8 @@
    },
    "source": [
     "### 1. click the \"play\" button (to run the code in the collapsed cell above)\n",
-    "### 2. enter url of dfn Terminplaner\n",
-    "### 3. enter name of person \n",
+    "### 2. enter url of dfn Terminplaner (and press the \"ENTER\" key)\n",
+    "### 3. enter name of person (and press the \"ENTER\" key)\n",
     "### 4. download ics whith selected options as tentative dates"
    ]
   }
