whole day events last 24 hrs

--- a/dfn-ics.ipynb
+++ b/dfn-ics.ipynb
@@ -56,9 +56,12 @@
     "        day = column.get(column.index[0]).split()[1]\n",
     "        #if table contains no time info --> whole day event\n",
     "        if((column.get(column.index[1]))=='-'):\n",
-    "            datestring = year+str(month).zfill(2)+day\n",
+    "            startstring = year+str(month).zfill(2)+day.zfill(2)\n",
+    "            endstring = year+str(month).zfill(2)+str(int(day.zfill(2))+1)\n",
     "            start_date = datetime.datetime.strptime(\n",
-    "              datestring, '%Y%m%d')            \n",
+    "              startstring, '%Y%m%d')\n",
+    "            end_date = datetime.datetime.strptime(\n",
+    "              endstring, '%Y%m%d')\n",
     "        #table contains time info\n",
     "        else:\n",
     "            # if there is no end date --> end date is one hour after start\n",
@@ -80,8 +83,7 @@
     "                      d_end, '%m/%d/%Y %H:%M')\n",
     "        event = Event()\n",
     "        event.add('dtstart', start_date)\n",
-    "        if not ((column.get(column.index[1]))=='-'):\n",
-    "            event.add('dtend', end_date)\n",
+    "        event.add('dtend', end_date)\n",
     "        event.add('summary', summary)\n",
     "        event.add('url', url)\n",
     "        event.add('status', 'TENTATIVE')\n",
@@ -109,6 +111,14 @@
     "### 3. enter name of person (and press the \"ENTER\" key)\n",
     "### 4. download ics whith selected options as tentative dates"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8299198-53b2-4a8a-95b6-08ad3a57cbcf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
